# quakefloat

./: .gitignore  CMakeLists.txt  README.md  codex_transcript.md  codex_transcript.txt  main.c  quakefloat.c  quakefloat.h
tests/: quakefloat_tests.c
